<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place Its</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search here!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Updates</string>
    <string name="action_location_found">Location Found!</string>
    <string name="action_add_note">Add Notes</string>
    <string name="cancel">Cancel</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="title_activity_day_chooser">DayChooser</string>
    <string name="confirm">Confirm</string>

</resources>
