<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    >


	
    <CheckBox
        android:id="@+id/Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"    
        />
    
    <TextView 
        android:id="@+id/SundayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sunday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Sunday"
		android:layout_marginLeft="4dp"
        
   	/>
    
    <View
        android:id="@+id/bar1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical"
        android:layout_below="@id/Sunday" />

    <CheckBox
        android:id="@+id/Monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar1"
        android:layout_alignParentRight="true" />
    
    <TextView 
        android:id="@+id/MondayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Monday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="4dp"
        android:layout_alignBaseline= "@id/Monday"
   	/>
    
     <View
        android:id="@+id/bar2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical" 
        android:layout_below="@id/Monday"/>

    <CheckBox
        android:id="@+id/Tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar2"
        android:layout_alignParentRight="true" />
    
    <TextView 
        android:id="@+id/TuesdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Tuesday"
		android:layout_marginLeft="4dp"
   	/>

     <View
        android:id="@+id/bar3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical"
        android:layout_below="@id/Tuesday"
         />

    <CheckBox
        android:id="@+id/Wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar3"
        android:layout_alignParentRight="true" />
    
    <TextView 
        android:id="@+id/WednesdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Wednesday"
		android:layout_marginLeft="4dp"
   	/>

     <View
        android:id="@+id/bar4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical"
        android:layout_below="@id/Wednesday" />

    <CheckBox
        android:id="@+id/Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" 
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar4"
        android:layout_alignParentRight="true" />

    <TextView 
        android:id="@+id/ThursdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thursday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Thursday"
		android:layout_marginLeft="4dp"
   	/>
    
     <View
        android:id="@+id/bar5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical"
        android:layout_below="@id/Thursday" />

    <CheckBox
        android:id="@+id/Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar5"
        android:layout_alignParentRight="true"  />

    <TextView 
        android:id="@+id/FridayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Friday"
		android:layout_marginLeft="4dp"
   	/>
    
     <View
        android:id="@+id/bar6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical"
        android:layout_below="@id/Friday"  />

    <CheckBox
        android:id="@+id/Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:onClick="onCheckBoxClicked"
        android:layout_below="@id/bar6"
        android:layout_alignParentRight="true" 
         />
    
    <TextView 
        android:id="@+id/SaturdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saturday"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline= "@id/Saturday"
		android:layout_marginLeft="4dp"
   	/>

     <View
        android:id="@+id/bar7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerVertical" 
        android:layout_marginTop="10dip"
        android:layout_below="@id/Saturday"/>
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/bar7"
         >
		 <Button
            android:id="@+id/chooseDaysCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" 
            android:layout_weight="1"/>
       

	     <View
              android:id="@+id/bar8"
              android:layout_width="1dip"
              android:layout_height="30dp"
              android:layout_marginBottom="7dp"
              android:layout_marginTop="7dip"
              android:background="?android:attr/dividerVertical" />

       	<Button
            android:id="@+id/chooseDaysConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/confirm" 
            android:layout_weight="1"/>
        
    </LinearLayout>

</RelativeLayout>